--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
     <groupId>no.ntnu.nilsjarh</groupId>
     <artifactId>datakom5-rest</artifactId>
     <version>1.0</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20170516</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
