added compiler in pom

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
 <groupId>no.ntnu.nilsjarh</groupId>
 <artifactId>datakom5-rest</artifactId>
 <version>1.0</version>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
+  </properties>
 <dependencies>
 	<dependency>
 		<groupId>org.json</groupId>
